--- a/capfolio/src/styles.css
+++ b/capfolio/src/styles.css
@@ -54,7 +54,7 @@ body {
   color: #fff;
   cursor: pointer;
   font-family: 'Sen', sans-serif;
-  font-size: 100%;
+  font-size: 1em;
   height: 44px;
   line-height: 1.15;
   outline: none;
